Adding inject delay option
Sometimes the injuction must be delayed to make sure that the livereload sript is injected properly.

--- a/options.html
+++ b/options.html
@@ -9,6 +9,9 @@
   <span style="font-weight: bold;">livereload.js url</span><br>
   <input type="text" id="livereloadUrl" style="margin-top: 5px;padding: 4px;width: 70%;"><br>
   <br>
+  <span style="font-weight: bold;">inject delay</span><br>
+  <input type="text" id="injectDelay" style="margin-top: 5px;padding: 4px;width: 70%;"><br>
+  <br>
   <button id="saveButton">Save</button>
 </body>
 
